Finish summary, nearly done with intro

--- a/references.bib
+++ b/references.bib
@@ -160,8 +160,6 @@
 @article{mcilvenny,
 	title = {Vélomobile Formations-in-Action Biking and Talking Together},
 	volume = {17},
-	issn = {1206-3312, 1552-8308},
-	doi = {10.1177/1206331213508494},
 	pages = {137--156},
 	number = {2},
 	journaltitle = {Space and Culture},
@@ -169,8 +167,7 @@
 	author = {{McIlvenny}, Paul},
 	date = {2014-05-01},
 	langid = {english},
-	keywords = {bicycling, mobile formation, mobility, social interaction, talk, video},
-	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/Z74V6D73/McIlvenny - 2014 - Vélomobile Formations-in-Action Biking and Talking.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/AM4IX9KV/137.html:text/html}
+	keywords = {bicycling, mobile formation, mobility, social interaction, talk, video}
 }
 
 
@@ -372,49 +369,6 @@
 	file = {JPT12-4DeMaio.pdf:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/K3VGD2N3/JPT12-4DeMaio.pdf:application/pdf}
 }
 
-@article{shah_motivation_2006,
-	title = {Motivation, Governance, and the Viability of Hybrid Forms in Open Source Software Development},
-	volume = {52},
-	rights = {Copyright Institute for Operations Research and the Management Sciences Jul 2006},
-	issn = {00251909},
-	url = {http://search.proquest.com.proxy.mah.se/docview/213260762?pq-origsite=summon},
-	abstract = {Open source software projects rely on the voluntary efforts of thousands of software developers, yet we know little about why developers choose to participate in this collective development process. This paper inductively derives a framework for understanding participation from the perspective of the individual software developer based on data from two software communities with different governance structures. In both communities, a need for software-related improvements drives initial participation. The majority of participants leave the community once their needs are met, however, a small subset remains involved. For this set of developers, motives evolve over time and participation becomes a hobby. These hobbyists are critical to the long-term viability of the software code: They take on tasks that might otherwise go undone and work to maintain the simplicity and modularity of the code. Governance structures affect this evolution of motives. Implications for firms interested in implementing hybrid strategies designed to combine the advantages of open source software development with proprietary ownership and control are discussed. [{PUBLICATION} {ABSTRACT}]},
-	pages = {1000--1014},
-	number = {7},
-	journaltitle = {Management Science},
-	author = {Shah, Sonali K.},
-	urldate = {2015-02-01},
-	date = {2006-07},
-	keywords = {Business And Economics--Labor And Industrial Relations, Innovations, Management science, Motivation, Open source software, Participation, Studies},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/3P8PDIJZ/213260762.html:text/html}
-}
-
-@inproceedings{buchenau_experience_2000,
-	location = {New York, {NY}, {USA}},
-	title = {Experience Prototyping},
-	isbn = {1-58113-219-0},
-	url = {http://doi.acm.org/10.1145/347642.347802},
-	doi = {10.1145/347642.347802},
-	series = {{DIS} '00},
-	abstract = {In this paper, we describe "Experience Prototyping" as a form of prototyping that enables design team members, users and clients to gain first-hand appreciation of existing or future conditions through active engagement with prototypes. We use examples from commercial design projects to illustrate the value of such prototypes in three critical design activities: understanding existing experiences, exploring design ideas and in communicating design concepts.},
-	pages = {424--433},
-	booktitle = {Proceedings of the 3rd Conference on Designing Interactive Systems: Processes, Practices, Methods, and Techniques},
-	publisher = {{ACM}},
-	author = {Buchenau, Marion and Suri, Jane Fulton},
-	urldate = {2015-02-01},
-	date = {2000},
-	keywords = {design, experience, methods, prototyping}
-}
-
-@inproceedings{ostrom_design_1999,
-	title = {Design principles and threats to sustainable organizations that manage commons},
-	url = {http://dlc.dlib.indiana.edu/dlc/handle/10535/5465},
-	booktitle = {Workshop in Political Theory and Policy Analysis, W99-6. Center for the Study of Institutions, Population, and Environmental Change. Indiana University, {USA}. www. indiana. edu},
-	author = {Ostrom, Elinor},
-	urldate = {2015-01-24},
-	date = {1999},
-	file = {Design Principles and Threats to Sustainable Organizations That Manage Commons.pdf:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/2PMZK8R9/Design Principles and Threats to Sustainable Organizations That Manage Commons.pdf:application/pdf}
-}
 
 @incollection{jensen,
   title={Erving Goffman and Everyday Life Mobility},
@@ -428,3 +382,22 @@
   publisher={Routledge}
 }
 
+@incollection{spinney2007,
+  title={Cycling the city: non-place and the sensory construction of meaning in a mobile practice},
+  author={Spinney, Justin},
+  booktitle={Cycling and society},
+  pages={25--45},
+  year={2007},
+  editor={Rosen, Paul and Cox, Peter and Horton, David},
+  publisher={Ashgate Aldershot}
+}
+
+@incollection{outthere,
+  booktitle={Off Tour: Compte-rendu d’étapes},
+  title={View from the saddle and the lens: Experiencing, examining and representing cycling cultures},
+  author={Jungnickel, Katrina},
+  pages={28--30},
+  year={2012},
+  publisher={ECAL University of Art and Design},
+  location={Lausanne, Switzerland}
+}
