Draft, nearly finished

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,3 @@
-
 @book{semmelhack_social_2013,
 	location = {Hoboken},
 	edition = {1},
@@ -11,7 +10,7 @@
 
 @thesis{cromwell,
 	location = {United States -- Washington},
-	title = {The Social Act of Bicycling Designing Bicycle Facilities to Foster Social Interaction},
+	title = {The Social Act of Bicycling: Designing Bicycle Facilities to Foster Social Interaction},
 	rights = {Copyright {ProQuest}, {UMI} Dissertations Publishing 2013},
 	institution = {University of Washington},
 	type = {Master's},
@@ -74,7 +73,6 @@
 @inproceedings{esbjornsson,
 	location = {New York, {NY}, {USA}},
 	title = {Motorcycling and Social Interaction: Design for the Enjoyment of Brief Traffic Encounters},
-	isbn = {1-58113-693-5},
 	series = {{GROUP} '03},
 	shorttitle = {Motorcycling and Social Interaction},
 	pages = {85--94},
@@ -82,7 +80,6 @@
 	publisher = {{ACM}},
 	author = {Esbjörnsson, Mattias and Juhlin, Oskar and Östergen, Mattias},
 	date = {2003},
-	keywords = {bikers, ethnography, social interaction, traffic encounters},
 }
 
 @incollection{jungnickel,
@@ -99,7 +96,6 @@
 @article{jungnickel_cyclings_2014,
 	title = {Cycling’s Sensory Strategies: How Cyclists Mediate their Exposure to the Urban Environment},
 	volume = {9},
-	issn = {1745-0101},
 	shorttitle = {Cycling’s Sensory Strategies},
 	pages = {238--255},
 	number = {2},
@@ -114,23 +110,20 @@
 	abstract = {View from the saddle and the lens: Experiencing, examining and representing cycling cultures.},
 }
 
-@article{aldred_outside:_2010,
+@article{aldred2010,
 	title = {‘On the outside’: constructing cycling citizenship},
 	volume = {11},
-	issn = {1464-9365},
 	shorttitle = {‘On the outside’},
 	pages = {35--52},
 	number = {1},
 	journaltitle = {Social \& Cultural Geography},
 	author = {Aldred, Rachel},
-	date = {2010-02-01},
+	date = {2010-02-01}
 }
 
-@article{aldred_constructing_2012,
+@article{aldred2012,
 	title = {Constructing Mobile Places between ‘Leisure’ and ‘Transport’: A Case Study of Two Group Cycle Rides},
 	volume = {46},
-	issn = {0038-0385, 1469-8684},
-	doi = {10.1177/0038038511428752},
 	shorttitle = {Constructing Mobile Places between ‘Leisure’ and ‘Transport’},
 	pages = {523--539},
 	number = {3},
@@ -139,7 +132,7 @@
 	author = {Aldred, Rachel and Jungnickel, Katrina},
 	date = {2012-06-01},
 	langid = {english},
-	keywords = {Cycling, ethnography, leisure, mobilities, rhythm, transport},
+	keywords = {Cycling, ethnography, leisure, mobilities, rhythm, transport}
 }
 
 @inproceedings{reddy_biketastic:_2010,
@@ -158,7 +151,7 @@
 }
 
 @article{mcilvenny,
-	title = {Vélomobile Formations-in-Action Biking and Talking Together},
+	title = {Vélomobile Formations-in-Action: Biking and Talking Together},
 	volume = {17},
 	pages = {137--156},
 	number = {2},
@@ -387,6 +380,16 @@
   author={Spinney, Justin},
   booktitle={Cycling and society},
   pages={25--45},
+  year={2007},
+  editor={Rosen, Paul and Cox, Peter and Horton, David},
+  publisher={Ashgate Aldershot}
+}
+
+@incollection{flaneur,
+  title={The flaneur on wheels?},
+  author={Oddy, Nicholas},
+  booktitle={Cycling and society},
+  pages={97--112},
   year={2007},
   editor={Rosen, Paul and Cox, Peter and Horton, David},
   publisher={Ashgate Aldershot}
