--- a/title.tex
+++ b/title.tex
@@ -7,7 +7,8 @@
 \begin{flushleft} \large
 \vspace*{2.0cm}
 \begin{spacing}{1.0}
-{ \huge \bfseries The sociality of everyday bicycling}}
+{ \huge \bfseries The sociality of everyday bicycling: \\
+random vélomobile formations-in-action}
 \end{spacing}
 \vspace*{2.0cm}
 {\large A research proposal by}
